Specified java.util packages imported and made necessary variables have keyword final; also rolled back schema changes for now