@@ -13,8 +13,10 @@ import uk.ac.warwick.dcs.sherlock.api.annotation.SherlockModule;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.*;
-import java.util.stream.*;
+import java.util.Arrays;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Objects;
 
 /**
  * Responsible for all classloading and reflection
@@ -22,7 +24,7 @@ import java.util.stream.*;
 public class AnnotationLoader {
 
 	static final Logger logger = LoggerFactory.getLogger(AnnotationLoader.class);
-	private Reflections ref;
+	private final Reflections ref;
 
 	/**
 	 * Load modules from directory, and initialise the reflection
@@ -63,7 +65,7 @@ public class AnnotationLoader {
 					e.printStackTrace();
 				}
 				return null;
-			}).collect(Collectors.toList()));
+			}).toList());
 
 			//Load libs to
 			File libs = new File(FilenameUtils.separatorsToSystem(modulesPath + "libs/"));
